Fixed modal visibility

--- a/Src/UberDeployer.WebApp/Static/css/bootstrap-helpers.less
+++ b/Src/UberDeployer.WebApp/Static/css/bootstrap-helpers.less
@@ -14,6 +14,10 @@
   margin-bottom: 15px;
 }
 
+.modal-open {
+  overflow: auto;
+}
+
 @media (max-width:767px) {
 .col-no-padding-left {
   padding-left: 15px;
