--- a/Src/UberDeployer.WebApp/Static/css/sidebar.less
+++ b/Src/UberDeployer.WebApp/Static/css/sidebar.less
@@ -32,6 +32,7 @@
 
 #page-content-wrapper {
   width: 100%;
+  overflow: hidden;
 }
 
 .sidebar-nav {
